# hwrclassification

./: .gitignore  Documentation.ipynb  LICENSE.txt  NER.py  README.md  cif_train.py  cifar_folders.py  environment.yml  keyword_extraction.py  main.py  notes.ipynb  pyproject.toml  summary.py
.ipynb_checkpoints/: Documentation-checkpoint.ipynb  README-checkpoint.md  notes-checkpoint.ipynb
classification/: package-lock.json  package.json
classification/electron/: index.js  preload.js  upload.js  window.js
classification/model/: NER.py  export_text_groups.py  keyword_extraction.py  main.py
classification/public/: index.html  style.css
electron/: index.js  preload.js
model/: package-lock.json  package.json
model/public/: index.html
model/src/: App.svelte
src/hwrclassification/: __about__.py
tests/: __init__.py
