[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwrclassification"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rimantas Liulys", email = "rimantas.liulys@student.ucll.be" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cowsay",
  "keras",
  "matplotlib",
  "tensorflow",
  "numpy"
]

[project.urls]
Documentation = "https://github.com/Rimantas Liulys/hwrclassification#readme"
Issues = "https://github.com/Rimantas Liulys/hwrclassification/issues"
Source = "https://github.com/Rimantas Liulys/hwrclassification"

[tool.hatch.version]
path = "src/hwrclassification/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]

[[tool.hatch.envs.test.matrix]]
python = ["2.7", "3.8"]
version = ["42", "3.14"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10"]
version = ["9000"]
features = ["foo", "bar"]
[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hwrclassification tests}"

[tool.coverage.run]
source_pkgs = ["hwrclassification", "tests"]
branch = true
parallel = true
omit = [
  "src/hwrclassification/__about__.py",
]

[tool.coverage.paths]
hwrclassification = ["src/hwrclassification", "*/hwrclassification/src/hwrclassification"]
tests = ["tests", "*/hwrclassification/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
